Fri Dec 20 20:14:52 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Fri Dec 20 20:13:12 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2971

Sat Sep  7 15:17:42 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat Sep  7 15:15:33 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2963

Sun Jul  7 16:34:07 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libelf/elf_update.c (_libelf_resync_sections): Call
	_libelf_compute_section_extents for SHT_NOBITS sections so its
	offset, size and align value are properly filled in.
	(_libelf_compute_section_extents): Remove assert on section type not
	being SHT_NOBITS.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/429

Mon Jul  1 21:13:36 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Mon Jul  1 21:11:23 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2953

Sat Jun 29 22:50:28 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/configure.ac (AC_PROG_LIBTOOL): Remove.

Sat Jun 29 21:34:50 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/configure.ac (AC_PROG_LIBTOOL): Add.

Sat Jun 29 17:53:35 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat Jun 29 17:49:43 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2952

Sat Jun  1 13:58:16 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.
